--- a/_layouts/cats.html
+++ b/_layouts/cats.html
@@ -6,9 +6,7 @@ layout: archive
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
-TESTING TESTING TESTING 
-
-CATS CATS CATS
+<a href="https://www.amazon.com/photos/shared/hFvMNamiQveuy8OyGkEs9g.vTzaa1WKwNxPoD4F5_njDS?sort=sortOldestToNewest"> View ALL the photos here! </a>`
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
